apps/base/excalidraw/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: excalidraw
  labels:
    toolkit.fluxcd.io/tenant: dev-devops
    podmonitorscrape: "true"
