apps/base/excalidraw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  namespace: excalidraw
  labels:
    app.kubernetes.io/name: excalidraw
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - excalidraw.alfonsofortunato.net
      secretName: excalidraw-tls
  rules:
    - host: excalidraw.alfonsofortunato.net
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: excalidraw
                port:
                  number: 3000
